src/styles/style.css
@import './base.css';
@import './reset.css';
@import './tokens.css';

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: clamp(327px, 90%, 540px);
  margin-inline: auto;
}

.heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 4em;
}

.heading-title {
  color: var(--text-heading);
  font-size: 2.222rem;
  font-weight: 700;
  letter-spacing: 0.833rem;
}

.heading-theme-btn {
  height: 26px;
  width: 26px;
  background: var(--icon-theme) no-repeat center / cover;
}

.input-form {
  position: relative;
  margin: 2.667em 0 1.333em;
}

.input-form-add-btn {
  height: 24px;
  width: 24px;
  border: 1px solid var(--border-color);
  border-radius: 50%;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 4.3%;
  background-color: var(--bg-add-btn);
}

.input-form-field {
  width: 100%;
  outline: none;
  border-radius: 0.278em;
  background-color: var(--bg-input);
  color: var(--text-primary);
  font-size: 1rem;
  padding: 1.278em 4em;
  caret-color: hsl(220, 98%, 61%);
}

.input-form-field:focus-visible {
  outline: 1px solid  hsl(280, 87%, 65%);
  outline-offset: 2px;
}

.input-form-field::placeholder {
  color: var(--text-secondary);
}

.todo-list {
  background-color: var(--bg-card);
  border-radius: 0.278em 0.278em 0 0;
  box-shadow: var(--shadow);
}

.todo-item {
  display: flex;
  align-items: center;
  padding: 1.111em 1.333em;
  border-bottom: 1px solid var(--border-color);
}

.todo-item-checkbox {
  -webkit-appearance: none;
  appearance: none;
  height: 24px;
  width: 24px;
  border-radius: 50%;
  border: 1px solid var(--border-color);
  cursor: pointer;
  flex-shrink: 0;
}

.todo-item-checkbox:checked {
  background:
    url(../assets/icon-check.svg) no-repeat center,
    linear-gradient(135deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
}

.todo-item-checkbox:not(:checked):hover {
  background:
    linear-gradient(var(--checkbox-dark), var(--checkbox-dark)) padding-box,
    linear-gradient(135deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%)) border-box;
  border-radius: 50%;
  border: 1px solid transparent;
}

.todo-item-label {
  color: var(--text-primary);
  margin-left: 1.333em;
  flex: 1;
  cursor: pointer;
}

.todo-item-label-done {
  text-decoration: line-through;
  color: var(--text-done);
}

.todo-item-delete {
  background: url(../assets/icon-cross.svg) no-repeat center / contain;
  background-color: transparent;
  width: 1em;
  height: 1em;
  display: none;
  flex-shrink: 0;
}

.todo-item:hover .todo-item-delete {
  display: block;
}

.todo-item-dragging {
  background-color: var(--dragging-bg);
}

.status-bar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--bg-card);
  border-radius: 0 0 0.278em 0.278em;
  box-shadow: var(--shadow);
  color: var(--text-secondary);
  padding: 1.111em 1.5em;
  position: relative;
  font-size: 0.778rem;
}

.status-bar-count {
  font-weight: 400;
}

.status-bar-filters {
  display: flex;
  gap: 0.7em;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.status-bar-clear-btn {
  color: var(--text-secondary);
  font-size: 0.778rem;
}

.status-bar-clear-btn:hover {
  color: var(--text-primary);
}

.filter-btn {
  font-size: 0.778rem;
  font-weight: 700;
  color: var(--text-secondary);
}

.filter-btn:hover {
  color: var(--text-primary);
}

.filter-btn-active {
  color: hsl(220, 98%, 61%);
}

.footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
  margin-top: 4em;
  padding-bottom: 2em;
}

.footer-drag-hint,
.footer-attribution {
  color: var(--text-secondary);
  font-size: 0.778rem;
  font-weight: 400;
}

.footer-attribution a {
  color: hsl(228, 45%, 44%);
}

@media (max-width: 768px) {
  :root {
    --bg-image: url(../assets/bg-mobile-light.jpg);
  }

  .dark-mode {
    --bg-image: url(../assets/bg-mobile-dark.jpg);
  }

  .todo-item-delete {
    display: flex;
  }
}

@media (max-width: 500px) {
  html {
    font-size: 0.875rem;
  }

  .status-bar {
    flex-wrap: wrap;
    padding-bottom: 1.222em;
  }

  .status-bar-filters {
    position: absolute;
    top: calc(100% + 16px);
    left: 0;
    width: 100%;
    justify-content: center;
    background-color: var(--bg-card);
    border-radius: 0.278em;
    box-shadow: var(--shadow);
    padding: 1em 1.4em;
    transform: none;
  }
}

